# yt-scraper

./: .bumpversion.cfg  .travis.yml  Makefile  Pipfile  README.md  db.sqlite  edges.csv  input.txt  nodes.csv  pyproject.toml  setup.py  todo.md
.vim/: coc-settings.json
data/: config.toml  config.toml.example  edges.csv  nodes.csv
ytcrawl/: click_helper.py  color_helper.py  command_line.py  config_helper.py
ytcrawl/fetch/: command.py
ytcrawl/query/: api.py  authenticate.py  command.py  tree.py
ytscraper/: __init__.py  __main__.py  app.py
ytscraper/commands/: config.py  fetch.py  search.py
ytscraper/helper/: config.py  configfile.py  echo.py  export.py  node.py  yt_api.py
