[tool.poetry]
name = "yt-scraper"
version = "0.6.0"
description = "Command line utility querying the YouTube API v3."
readme = "README.md"
authors = ["Michael Brauweiler <rattletat@posteo.me>"]
license = "Unlicense"
keywords = ['youtube', 'scraping', 'API']
packages = [
    { include = "ytscraper" },
]
exclude = ["tests/"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
google-api-python-client = "^1.8.0"
appdirs = "^1.4.3"
ratelimit = "^2.2.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"
pylint = "^2.4.4"
jedi = "^0.16.0"
yapf = "^0.29.0"
pytest = "^5.4.1"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
mkdocs = "^1.1"
pyinstaller = "^3.6"
bandit = "^1.6.2"
rope = "^0.16.0"
pep8 = "^1.7.1"
pycodestyle = "^2.5.0"

[tool.poetry.scripts]
yt-scraper = 'ytscraper.app:run'

